--- a/index.html
+++ b/index.html
@@ -1,34 +1,26 @@
 <!DOCTYPE html>
 <html>
-
 <head>
-	<meta charset="utf-8">
-	<title>World Database Lookup</title>
-
-	<!-- you can modify this as needed or to your preference -->
-	<link href="world.css" type="text/css" rel="stylesheet" />
-
-	<!-- you write this -->
-
+    <meta charset="utf-8">
+    <title>World Database Lookup</title>
+    <link href="world.css" type="text/css" rel="stylesheet" />
+	<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
 </head>
-
 <body>
-	<header>
-		<h1>World Database Lookup</h1>
-	</header>
-
-	<main>
-		<div id="controls">
-			<label for="country">Country:</label>
-			<input id="country" type="search" name="country" placeholder="Enter country name" />
-			<button id="lookup">Lookup</button>
-		</div>
-
-		<div id="result">
-			<!-- countries will appear here -->
-		</div>
-	</main>
-	<script src="world.js" type="text/javascript"></script>
+    <header>
+        <h1>World Database Lookup</h1>
+    </header>
+    <main>
+        <div id="controls">
+            <label for="country">Country:</label>
+            <input id="country" type="search" name="country" placeholder="Enter country name" />
+            <button id="lookup">Lookup Country</button>
+            <button id="lookup-cities">Lookup Cities</button>
+        </div>
+        <div id="result">
+            <!-- countries will appear here -->
+        </div>
+    </main>
+    <script src="world.js" type="text/javascript"></script>
 </body>
-
 </html>
